style/public.css
/* ... */
@-webkit-keyframes fade {
	from {opacity: .4}
	to {opacity: 1}
}

@keyframes fade {
	from {opacity: .4}
	to {opacity: 1}
}

/********************/
/*  manjsi zasloni  */
/*  ni prilagoditev */

/********************/
/* main */
/********************/

.blog_main {
	width: 1000px;
	margin: auto;
	padding: 2em;
}

.blog_post_all {
	height: 300px;
	margin: 2em 0;
	display: flex;
}

.blog_post_all:hover {
	background-color: #f0f0f0;
}

.blog_post_demo_opis, .blog_post_demo_slika_levo, .blog_post_demo_slika_desno {
	width: 500px;
	height: 300px;
}

.blog_post_demo_slika_levo img, .blog_post_demo_slika_desno img {
	width: 450px;
	height: 250px;
	object-fit: cover;
	margin: 25px;
}

.blog_post_demo_besedilo {
	width: 450px;
	height: 200px;
	margin: 25px 25px 0 25px;
	padding-top: 25px;
}

.blog_post_demo_besedilo h3 {
	text-align: center;
	font-size: 30px;
}

.blog_post_demo_besedilo p {
	text-align: center;
}

.blog_post_demo_date {
	color: #90989d;
}

.blog_post_demo_vec {
	width: 450px;
	height: 25px;
	margin: 0px 25px 25px 25px;
	text-align: center;
}
.blog_post_demo_vec:hover {
	color: #90989d;
}

/********************/
/*  manjsi zasloni  */

@media only screen and (max-width: 1100px) {
	.blog_main {
		width: 800px;
	}

	.blog_post_all {
		width: 800px;
		height: 500px;
		display: block;
	}

	.blog_post_demo_opis {
		width: 750px;
		height: 450px;
		z-index: 2;
		position: relative;
		top: 25px;
		margin: 25px;
	}

	.blog_post_demo_slika_levo, .blog_post_demo_slika_desno {
		width: 800px;
		height: 500px;
		z-index: 1;
		position: absolute;
	}

	.blog_post_demo_slika_desno {
		margin-top: -475px;
	}

	.blog_post_demo_slika_levo img, .blog_post_demo_slika_desno img {
		width: 750px;
		height: 450px;
		opacity: 0.3;
	}

	.blog_post_demo_besedilo {
		width: 400px;
		height: 300px;
		padding: 85px 0px 0px 0px;
		margin: auto;
	}

	.blog_post_demo_vec {
		width: 600px;
		margin: auto;
	}

	.blog_post_demo_date {
		color: #3e464a;
	}
}

@media only screen and (max-width: 800px) {
	.blog_main {
		width: 100%;
		padding: 0px;
	}

	.blog_post_all {
		height: 450px;
		width: 100%;
	}

	.blog_post_demo_opis {
		width: 100%;
		top: 0px;
		margin: 0px;
	}

	.blog_post_demo_slika_levo, .blog_post_demo_slika_desno {
		width: 100%;
		height: 450px;
	}

	.blog_post_demo_slika_desno {
		margin-top: -450px;
	}
	
	.blog_post_demo_slika_levo img, .blog_post_demo_slika_desno img {
		width: 100%;
		margin: 0px;
	}

	.blog_post_demo_besedilo {
		width: 100%;
	}

	.blog_post_demo_vec {
		width: 100%;
	}
}

/******************************************************************************/
/* POST.PHP */
/******************************************************************************/

/********************/
/* main */
/********************/

.post_main {
	width: 1250px;
	margin: auto;
	padding: 2em 0px 5em;
}

/* title */
.post_title_div {
	width: 100%;
	border-bottom: 2px solid #c6cacd;
}

.post_title_div h1 {
	text-align: center;
}

/* author and date */
.post_date_div {
	margin: 1em 0 2em;
	width: 100%;
	text-align: center;
	color: #90989d;
}

/* banner */
.post_image_div img {
	width: 100%;
	height: 300px;
	object-fit: cover;
}

/* post + side */
.post_main_div {
	width: 100%;
	display: flex;
}

/********************/
/* post */
/********************/

.post_comment_div {
	width: 800px;
	padding: 3em 0em;
	margin: 0;
}

.post_description {
	width: 400px;
	margin: auto;
	text-align: center;
	margin-bottom: 2em;
	color: #90989d;
}

.post_body_out {
	width: 100%;
	border-top: 2px solid #c6cacd;
	border-bottom: 2px solid #c6cacd;
}

.post_body_in {
	width: 600px;
	margin: auto;
	text-align: justify;
	color: #3e464a;
	font-size: 18px;
	display: block;
	padding: 1em;
}

/********************/
/* comments */
/********************/

.post_comment_section {
	width: 100%;
}

.post_comment_section h2 {
	text-align: center;
}

.post_comments {
	width: 100%;
	border-top: 2px solid #c6cacd;
	border-bottom: 2px solid #c6cacd;
}

/********************/
/* new comment */

.post_comments_new {
	display: block;
	width: 100%;
	margin: auto;
	margin-top: 2em;
	margin-bottom: 2em;
	width: 700px;
	border-top: 2px solid #c6cacd;
	border-bottom: 2px solid #c6cacd;
}

.post_comments_new form {
	display: block;
	margin: auto;
}

.post_comments_new h3 {
	text-align: center;
}

/********************/
/* username and email */
.post_new_username_email {
	width: 600px;
	margin: auto;
	display: flex;
}

.post_new_username_div, .post_new_email_div {
	width: 300px;
	margin-bottom: 2em;
}

.post_new_input_username, .post_new_input_email {
	height: 30px;
	width: 80%;
	margin: auto;
	display: block;
	border: none;
	border-top: 2px solid #c6cacd;
	border-bottom: 2px solid #c6cacd;
	text-align: center;
}

.post_new_input_username:hover, .post_new_input_email:hover {
	border-top: 2px solid #5d6970;
	border-bottom: 2px solid #5d6970;
}

/********************/
/* text */
.post_new_text {
	width: 600px;
	margin: auto;
	margin-bottom: 2em;
	display: grid;
	place-items: center;
	border-bottom: 2px solid #c6cacd;
	border-top: 2px solid #c6cacd;
}

.post_new_input_text {
	width: 100%;
	border: none;
}

::-webkit-input-placeholder {
	text-align: center;
}
  
:-moz-placeholder {
	text-align: center;
}

/********************/
/* submit */
input[type=submit] {
	margin: auto;
	display: block;
	margin-bottom: 2em;
    background:#c6cacd;
	color: #000000;
    border: 0 none;
    cursor: pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;
	height: 3em;
	width: 200px;
	font-size: 1em;
	font-family: 'Josefin Sans', serif;
}

input[type=submit]:hover {
	background:#3e464a;
	color: #ffffff;
}

/********************/
/* all comments */
.post_comments_div {
	width: 700px;
	margin: auto;
	margin-bottom: 2em;
	border-bottom: 2px solid #c6cacd;
	border-top: 2px solid #c6cacd;
}

.post_comments_div h3 {
	text-align: center;
}

.post_comment_box {
	width: 600px;
	margin: 2em auto;
}

p.a {
	font-weight: bold;
}
/* ... */

